--- a/example.env
+++ b/example.env
@@ -1,4 +1,4 @@
-
+# WhatsApp Business API Configuration
 # This token expires after 24 hours. You can get a new one from the your Meta App Dashboard > API Setup
 # Or you can create an access token at the System User level from the Meta Business Settings: https://business.facebook.com/settings/system-users
 
@@ -10,7 +10,12 @@ RECIPIENT_WAID="" # Your WhatsApp number with country code (e.g., +31612345678)
 VERSION="v18.0"
 PHONE_NUMBER_ID=""
 
-VERIFY_TOKEN=""
+VERIFY_TOKEN="12345"
 
+# OpenAI Configuration
 OPENAI_API_KEY=""
 OPENAI_ASSISTANT_ID=""
+
+# Optional: Customize your assistant's behavior
+ASSISTANT_NAME="WhatsApp AI Assistant"
+ASSISTANT_INSTRUCTIONS="You're a helpful WhatsApp assistant. Be friendly, concise, and helpful in your responses."
